Author related attributes have been documented